<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" android:id="@+id/AccountViewHolder"
                                    android:layout_marginTop="8dp"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    android:layout_marginStart="8dp" android:clickable="true" android:focusable="true">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/txn_box">

        <TextView
                android:text="@string/deposit_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txn_deposit_amount"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/txn_balance" android:layout_marginBottom="8dp"/>
        <TextView
                android:text="@string/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txn_description"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/txn_deposit_amount" android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txn_balance"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"/>
        <TextView
                android:text="@string/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txn_id"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/txn_balance"
                app:layout_constraintEnd_toEndOf="@+id/txn_date"
                app:layout_constraintTop_toTopOf="@+id/txn_balance"
                app:layout_constraintStart_toStartOf="@+id/txn_date"/>
        <TextView
                android:text="@string/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txn_date" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>