<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" android:id="@+id/AccountViewHolder"
                                    android:layout_marginTop="8dp"
                                    app:layout_constraintTop_toTopOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    android:layout_marginStart="8dp" android:clickable="true" android:focusable="true">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/acct_name"
                app:layout_constraintTop_toTopOf="@+id/acct_id" app:layout_constraintStart_toEndOf="@+id/acct_id"
                android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="@+id/acct_id"/>
        <TextView
                android:text="@string/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/acct_number"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/acct_id" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"/>
        <TextView
                android:text="@string/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/acct_balance"
                app:layout_constraintStart_toEndOf="@+id/acct_number"
                android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/acct_number"
                app:layout_constraintBottom_toBottomOf="@+id/acct_number"/>
        <TextView
                android:text="@string/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/acct_id" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>